List/array support, transients, and other updates